# KotlinNativeForAndroid

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/cpp/: CMakeLists.txt  ndk-wrapper.cpp  shared-wrapper.cpp
androidApp/src/main/java/com/ryunen344/kotlin/android/android/: FibonacciKotlin.kt  MainActivity.kt  NdkWrapper.kt  SharedWrapper.kt
androidApp/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts
shared/src/androidMain/: AndroidManifest.xml
shared/src/androidMain/kotlin/com/ryunen344/kotlin/android/: Platform.kt
shared/src/androidNativeMain/kotlin/com/ryunen344/kotlin/android/: Fibonacci.kt  Hoge.kt  Platform.kt
shared/src/commonMain/kotlin/com/ryunen344/kotlin/android/: Greeting.kt  Platform.kt
shared/src/iosMain/kotlin/com/ryunen344/kotlin/android/: Platform.kt
